feat(learning): illustrate java stage 8b lesson
Refs #95